<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MobiPrintActivity!</string>
    <string name="app_name">MobiPrint</string>
    <string name="app_description">MobiPrint, a sample application used in my Master\'s Thesis with the topic "Comparison and evaluation of cross platform frameworks for the development of mobile business applications"</string>
    <string name="old_orders">Old orders</string>
    <string name="add_pictures">Add pictures</string>
    <string name="current_order">Current order</string>
    <string name="old_orders_heading_fmt">There are %d old orders in total:</string>
    <string name="num_pictures_fmt">%d pictures</string>
    <string name="order_num_pictures_fmt">This order has %d pictures:</string>
    <string name="uploading">Uploading</string>
    <string name="uploaded">Uploaded</string>
    <string name="printed">Printed</string>
    <string name="add_pictures_heading_fmt">There are %d folders with pictures:</string>
    <string name="select_for_printing">Add the above picture</string>
    <string name="num_pictures_in_folder_fmt">There are %d pictures in this folder:</string>
    <string name="no_pictures_selected">You did not select any pictures.</string>
    <string name="will_upload_n_pictures_fmt">%d pictures will be uploaded. Check the current order tab for the status.</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="confirm_order">Confirm order</string>
    <string name="submit_for_printing">Submit for printing…</string>
    <string name="submit_order">Submit order</string>
    <string name="submit_heading_fmt">To submit your order of %d pictures, select a pick-up location close to you and enter your details.</string>
    <string name="enter_address">Enter an address to show stores near you:</string>
    <string name="must_enter_credentials">You must enter your username and password.</string>
    <string name="must_select_store">You must select a store.</string>
    <string name="must_confirm_order">You must confirm the order.</string>
    <string name="order_submitted">The order was submitted successfully.</string>

</resources>
